Adding bootstrap, jquery, etc

--- a/views/main/about.jade
+++ b/views/main/about.jade
@@ -2,4 +2,4 @@ extends ../layout
 
 block content
   div.jumbotron
-  div.container Main page stuff goes here
+  div.container About stuff goes here
