--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -1,5 +1,7 @@
 extends ../layout
 
 block content
-  h1= title
-  p Welcome to #{title}, #{ current_user.fullName() }
+  div.jumbotron
+    h3 Dashboard
+  div.container
+    p Welcome to #{title}, #{ current_user.fullName() }
