--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,12 +2,53 @@ doctype 5
 html
   head
     title= title
+    link(rel='stylesheet', href='/lib//bootstrap-3.0.0/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    block head-css
+    script(type='text/javascript', src='/lib/jquery-ui-1.10.3/js/jquery-1.9.1.js')
+    script(type='text/javascript', src='/lib/bootstrap-3.0.0/dist/js/bootstrap.min.js')
+    block head-js
   body
-    div#login-status
-      if logged_in
-        a(href='/logout') Hi, #{ current_user.fullName() } (Logout)
-      else
-        a(href='/login') Login
-      end
+    div.navbar.navbar-inverse.navbar-fixed-top
+      div.container
+        div.navbar-header
+          button(type='button', data-toggle='collapse', data-target='.navbar-collapse').navbar-toggle
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand Inspector.ly
+        div.navbar-collapse.collapse
+          ul.nav.navbar-nav
+            if active_tab === 'home'
+              li.active
+                a(href='/') Home
+            else
+              li
+                a(href='/') Home
+            if active_tab === 'about'
+              li.active
+                a(href='/about') About
+            else
+              li
+                a(href='/about') About
+            if active_tab === 'contact'
+              li.active
+                a(href='/contact') Contact
+            else
+              li
+                a(href='/contact') Contact
+          if logged_in
+            ul.nav.navbar-nav.navbar-right
+              li
+                a(href='/logout') Logout
+          else
+            form(action='/login', method='post').navbar-form.navbar-right
+              div.form-group.right-pad
+                input(type='text', placeholder='Email', name='username').form-control
+              div.form-group.right-pad
+                input(type='password', placeholder='Password', name='password').form-control
+              button(type='submit').btn.btn-success Sign in
+            ul.nav.navbar-nav.navbar-right
+              li
+                a(href='/register') Register
     block content
