Moving UI to Angular

--- a/public/stylesheets/dashboard.styl
+++ b/public/stylesheets/dashboard.styl
@@ -8,7 +8,11 @@
             margin-right 2px
             
 #snippets-container
+    .snippet
+        margin-bottom 5px
     .snippet-content
         padding 5px
         background-color #DCDCDC
         border 1px solid Grey
+    .snippet-actual
+        margin-top 5px
