--- a/views/report_templates/add.jade
+++ b/views/report_templates/add.jade
@@ -1,5 +1,8 @@
 extends ../layout
 
+block head-css
+    link(rel='stylesheet', href='/stylesheets/dashboard.css')
+
 block head-js
     script(type='text/javascript', src='/lib/ckeditor/ckeditor.js')
     script(type='text/javascript', src='/javascripts/report_templates/add.js')
