--- a/views/snippets/_snippet_adder.jade
+++ b/views/snippets/_snippet_adder.jade
@@ -4,3 +4,4 @@ div.panel.panel-default
         div.container
             div#snippets-container
                 div.loading
+            a(href='/snippets/add').btn.btn-success.btn-xs.pull-right Add
