--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -9,8 +9,14 @@
 #user-actions ul a {
   margin-right: 2px;
 }
+#snippets-container .snippet {
+  margin-bottom: 5px;
+}
 #snippets-container .snippet-content {
   padding: 5px;
   background-color: #dcdcdc;
   border: 1px solid Grey;
+}
+#snippets-container .snippet-actual {
+  margin-top: 5px;
 }
