--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -4,9 +4,15 @@ block head-css
   link(rel='stylesheet', href='/stylesheets/dashboard.css')
 
 block head-js
-  script(type='text/javascript', src='/javascripts/dashboard.js')
+  script(type='text/javascript', src='/javascripts/dashboard/dashboard.js')
+  script(type='text/javascript', src='/javascripts/dashboard/dashboard-app.js')
+  script(type='text/javascript', src='/javascripts/organizations/controller.js')
+  script(type='text/javascript', src='/javascripts/organizations/service.js')
+  script(type='text/javascript', src='/javascripts/snippets/service.js')
+  script(type='text/javascript', src='/javascripts/snippets/controller.js')
 
 block content
+  div(ng-app='inspectory.ly.dashboard')
     div#user-actions.row
       div.col-md-6
         include _reports
@@ -14,3 +20,4 @@ block content
       div.col-md-6
         include _snippets
         include _organizations
+block foot-js
