--- a/views/snippets/_complete.jade
+++ b/views/snippets/_complete.jade
@@ -1,5 +1,9 @@
 - snippets.forEach(function(snippet) {
     div.snippet
         a(href='#').snippet-name #{snippet.name}
-        div.snippet-content.hidden.well #{snippet.content}
+        div.pull-right
+            a(href='snippets/#{snippet.id}/edit').btn.btn-default.btn-xs Edit
+            a(href='snippets/#{snippet.id}/delete').btn.btn-danger.btn-xs Delete
+        div.clearfix
+        div.snippet-actual.hidden.well #{snippet.content}
 - })
