--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -5,6 +5,7 @@ block head-css
 
 block head-js
   script(type='text/javascript', src='/javascripts/dashboard/dashboard.js')
+  script(type='text/javascript', src='/javascripts/angular_common/global_errors.js')
   script(type='text/javascript', src='/javascripts/dashboard/dashboard-app.js')
   script(type='text/javascript', src='/javascripts/organizations/controller.js')
   script(type='text/javascript', src='/javascripts/organizations/service.js')
@@ -13,6 +14,7 @@ block head-js
 
 block content
   div(ng-app='inspectory.ly.dashboard')
+    <div class="messagesList" app-messages></div>
     div#user-actions.row
       div.col-md-6
         include _reports
