--- a/views/report_templates/add.jade
+++ b/views/report_templates/add.jade
@@ -12,6 +12,16 @@ block content
         li
             a(href='/dashboard') Dashboard
         li.active Create Report Template
+    if validation_errors
+        div.alert.alert-danger.alert-dismissable
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            strong #{validation_errors.message}
+            if validation_errors && validation_errors.errors.length > 0
+                ol
+                    - validation_errors.errors.forEach(function(e) {
+                        li
+                            span #{e.name + ' ' + e.type}
+                    - })   
     form(method='post' action='/report_templates/create')
         div.row
             div.col-md-2
@@ -20,4 +30,4 @@ block content
                 div.row
                     include ../snippets/_snippet_adder
             div.col-md-10
-                textarea(name='report_template_content')#editor
+                textarea(name='report_template_content')#editor #{report_template.content}
