Added session timeout functionality

--- a/views/dashboard/_organizations.jade
+++ b/views/dashboard/_organizations.jade
@@ -8,13 +8,13 @@ div.panel.panel-default
                     li(ng-repeat="organization in organizations | orderBy:name:false")
                         span {{organization.name}}
                         div.pull-right
-                            a(ng-click='edit($index)', title='Edit this organization', ng-disabled='deleting($index)', ng-hide='editing($index)').btn.btn-default Edit
-                            a(ng-click='destroy($index)', title='Delete this organization', ng-disabled='deleting($index)', ng-hide='editing($index)').btn.btn-danger Delete
+                            a(ng-click='edit($index)', title='Edit this organization', ng-disabled='deleting($index) || adding', ng-hide='editing($index)').btn.btn-default Edit
+                            a(ng-click='destroy($index)', title='Delete this organization', ng-disabled='deleting($index) || adding', ng-hide='editing($index)').btn.btn-danger Delete
                         div.clearfix
                         div(ng-show='editing($index)').spacer5
                             div.panel.panel-default
                                 div.panel-heading Edit Organization
-                                    <button type="button" class="close" aria-hidden="true" ng-click='stopEditing($index)'>&times;</button>
+                                    <button type="button" class="close" aria-hidden="true" ng-click='cancelEditing($index)', title='Cancel editing'>&times;</button>
                                 div.panel-body
                                     div.form-group
                                         input(type='text', name='name', id='name', placeholder='Organization name', ng-model='organization.name').form-control
@@ -34,4 +34,4 @@ div.panel.panel-default
                                         a(ng-click='create()', title='Create this organization').btn.btn-success.btn-xs Create
                                 div.form-group &nbsp;
                     div.clearfix
-            a(ng-click='startAdd()', ng-hide='adding', title='Add a new organization', ng-hide='editingAny()').btn.btn-success.pull-right Add
+            a(ng-click='startAdd()', ng-hide='adding', title='Add a new organization', ng-hide='editingAny() || adding', title='Cancel add').btn.btn-success.pull-right Add
