--- a/views/dashboard/_snippets.jade
+++ b/views/dashboard/_snippets.jade
@@ -8,13 +8,13 @@ div.panel.panel-default
                     li(ng-repeat="snippet in snippets | orderBy:name:false")
                         span {{snippet.name}}
                         div.pull-right
-                            a(ng-click='edit($index)', ng-hide='editing($index)', ng-disabled='deleting($index)').btn.btn-default Edit
-                            a(ng-click='destroy($index)', ng-hide='editing($index)', ng-disabled='deleting($index)').btn.btn-danger Delete
+                            a(ng-click='edit($index)', ng-hide='editing($index)', ng-disabled='deleting($index) || adding', title='Edit this snippet').btn.btn-default Edit
+                            a(ng-click='destroy($index)', ng-hide='editing($index)', ng-disabled='deleting($index) || adding', title='Delete this snippet').btn.btn-danger Delete
                         div.clearfix
                         div(ng-show='editing($index)').spacer5
                             div.panel.panel-default
                                 div.panel-heading Edit Snippet
-                                    <button type="button" class="close" aria-hidden="true" ng-click='stopEditing($index)'>&times;</button>
+                                    <button type="button" class="close" aria-hidden="true" ng-click='cancelEditing($index)', title='Cancel editing'>&times;</button>
                                 div.panel-body
                                     div.form-group
                                         input(type='text', name='name', id='name', placeholder='Snippet name', ng-model='snippet.name').form-control
@@ -22,12 +22,12 @@ div.panel.panel-default
                                         textarea(name='content', id='content', placeholder='Snippet content', rows='4', ng-model='snippet.content').form-control
                                     div.form-group
                                         div.pull-right
-                                            a(ng-click='update($index)').btn.btn-success.btn-xs Update
+                                            a(ng-click='update($index)', title='Update this snippet').btn.btn-success.btn-xs Update
                         div.clearfix
                     li(ng-show='adding')
                         div.panel.panel-default
                             div.panel-heading Create a Snippet
-                                 <button type="button" class="close" aria-hidden="true" ng-click='stopAdd()'>&times;</button>
+                                 <button type="button" class="close" aria-hidden="true" ng-click='stopAdd()', title='Cancel add'>&times;</button>
                             div.panel-body
                                 div.form-group
                                     input(type='text', name='name', id='name', placeholder='Snippet name', ng-model='snippetName').form-control
@@ -38,5 +38,5 @@ div.panel.panel-default
                                         a(ng-click='create()').btn.btn-success.btn-xs Create
                                 div.form-group &nbsp;
                     div.clearfix
-            a(ng-click='startAdd()', ng-hide='adding', ng-hide='editingAny()').btn.btn-success.pull-right Add
+            a(ng-click='startAdd()', ng-hide='adding', ng-hide='editingAny() || adding', 'Create a new snippet').btn.btn-success.pull-right Add
                
