Rename app and fix all refs

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -68,5 +68,6 @@ html
                   a(href='/register') Register
     div.main
       block content
-      include common/_session_timeout
+    include common/_footer  
+    include common/_session_timeout
     block foot-js
