--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,16 @@
 body {
   padding: 20px;
 }
+#footer {
+  border-radius: 4px;
+  padding-top: 5px;
+  margin-top: 10px;
+  height: 30px;
+  background-color: #f5f5f5;
+}
+#footer .credit {
+  text-align: center;
+}
 .right-pad {
   margin-right: 2px;
 }
