--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,13 @@
 body
   padding 20px
+#footer
+  border-radius 4px
+  padding-top 5px
+  margin-top 10px;
+  height 30px
+  background-color #f5f5f5
+  .credit
+    text-align center
 .right-pad
   margin-right 2px
 .clear
