--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -13,8 +13,8 @@ block head-js
   script(type='text/javascript', src='/javascripts/snippets/controller.js')
 
 block content
-  div(ng-app='inspectory.ly.dashboard')
-    <div class="messagesList" app-messages></div>
+  div(ng-app='InspectIt.dashboard')
+    div(app-messages).messagesList
     div#user-actions.row
       div.col-md-6
         include _reports
