Renamed project again

--- a/views/dashboard/index.jade
+++ b/views/dashboard/index.jade
@@ -13,7 +13,7 @@ block head-js
   script(type='text/javascript', src='/javascripts/snippets/controller.js')
 
 block content
-  div(ng-app='InspectIt.dashboard')
+  div(ng-app='ReportIt.dashboard')
     div(app-messages).messagesList
     div#user-actions.row
       div.col-md-6
