--- a/views/report_templates/add.jade
+++ b/views/report_templates/add.jade
@@ -2,11 +2,14 @@ extends ../layout
 
 block head-css
     link(rel='stylesheet', href='/lib/redactor/redactor.css')
+    link(rel='stylesheet', href='/lib/redactor/clips/clips.css')
     link(rel='stylesheet', href='/stylesheets/dashboard.css')
 
 block head-js
     script(type='text/javascript', src='/lib/redactor/redactor.min.js')
-    script(type='text/javascript', src='/javascripts/report_templates/add.js')
+    script(type='text/javascript', src='/lib/redactor/clips/clips.js')
+    script(type='text/javascript', src='/lib/redactor/fontsize/fontsize.js')
+    script(type='text/javascript', src='/javascripts/report_templates/form.js')
 
 block content
     ol.breadcrumb
