Upgrade to paid redactor

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -25,3 +25,29 @@ body
   margin-top 60px
 .spacer5
   margin-top 5px
+.snippets
+  padding 5px
+  max-height 300px
+  scroll-y auto
+#organizations-select
+  margin-top 10px
+  max-height 300px
+  overflow-y auto
+#user-actions
+    ul
+        list-style-type none
+        li
+            padding 5px
+            border-bottom 1px solid #DCDCDC
+        span, a
+            margin-right 2px
+#snippets-container
+    .snippet
+        margin-bottom 5px
+    .snippet-content
+        padding 5px
+        background-color #DCDCDC
+        border 1px solid Grey
+    .snippet-actual
+        margin-top 5px
+  
