--- a/views/report_templates/_report_template_settings.jade
+++ b/views/report_templates/_report_template_settings.jade
@@ -11,21 +11,25 @@ div.panel.panel-default
                         placeholder='Name this template').form-control #{report_template.name}
             div.row
                 div.col-lg-12
-                    label(for='organization_id').control-label Associate With Organization(s)
+                    label(for='client') Client
             div.row
                 div.col-lg-12
-                    div#organizations(ng-repeat='o in organizations')
-                        input(type='checkbox', checked='o.associated', ng-model='o.associated' id='organization_{{ o._id }}')
-                        &nbsp;
-                        label(for='organization_{{ o._id }}') {{ o.name }}
-                    small &nbsp;
-                        a(href='#', ng-click='addOrganization()') (Create one)
+                    input(type='text', id='client', ng-model='reportTemplate.client', placeholder='Client name').form-control
             div.row
                 div.col-lg-12
                     label(for='template_description').control-label Description
             div.row
                 div.col-lg-12
                     textarea(id='template_description', name='template_description', rows='6', ng-model='reportTemplate.description').form-control
+            div.row#organizations-select
+                div.col-lg-12
+                    div.panel.panel-default
+                        div.panel-heading Organization(s)
+                        div.panel-body
+                            div#organizations(ng-repeat='o in organizations')
+                                div.checkbox
+                                    label {{ o.name }}
+                                        input(type='checkbox', checked='o.associated', ng-model='o.associated' id='organization_{{ o._id }}')
             div.row
                 div.col-lg-12.top-margin5
                     button(ng-disabled='isFormInvalid()', ng-click='save()').btn.btn-success.form-control Save
