--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,3 +34,35 @@ body {
 .spacer5 {
   margin-top: 5px;
 }
+.snippets {
+  padding: 5px;
+  max-height: 300px;
+  scroll-y: auto;
+}
+#organizations-select {
+  margin-top: 10px;
+  max-height: 300px;
+  overflow-y: auto;
+}
+#user-actions ul {
+  list-style-type: none;
+}
+#user-actions ul li {
+  padding: 5px;
+  border-bottom: 1px solid #dcdcdc;
+}
+#user-actions ul span,
+#user-actions ul a {
+  margin-right: 2px;
+}
+#snippets-container .snippet {
+  margin-bottom: 5px;
+}
+#snippets-container .snippet-content {
+  padding: 5px;
+  background-color: #dcdcdc;
+  border: 1px solid Grey;
+}
+#snippets-container .snippet-actual {
+  margin-top: 5px;
+}
