--- a/views/dashboard/_reports.jade
+++ b/views/dashboard/_reports.jade
@@ -1,7 +1,15 @@
 div.panel.panel-default
     div.panel-heading Reports
     div.panel-body
-        div.container
-            div#reports-container
-                div.loading
-            a(href='/reports/add').btn.btn-success.pull-right Add
+        div(ng-controller='ReportsController').container
+            div#report-container
+                ul
+                    li(ng-hide='reports.length > 0') You have not created any reports.
+                    li(ng-repeat="report in reports | orderBy:name:false")
+                        span {{report.name}} &nbsp;&nbsp;
+                        span ({{ report.client || 'No client' }})
+                        div.pull-right
+                            a(href='/reports/edit/{{report._id}}', title='Edit this report').btn.btn-default Edit
+                            a(ng-click='destroy($index)', ng-disabled='deleting($index)', title='Delete this report').btn.btn-danger Delete
+                        div.clearfix
+            a(href='/reports/add', title='Create a new report').btn.btn-success.pull-right Add
